# social-media-scrap

./: .env  .env.example  .env.server  .gitignore  01.PRD.md  Makefile  README.md  api-readme-access.md  docker-compose.yml  pyproject.toml  requirements-ai.txt  requirements-reports.txt
app/: main.py
docs/: 01.PRD.md  02.TDD.md  03.architecture.md  04.PROJECT-STRUCTURE.md  05.IMPLEMENTASI PLAN.md  06.API-SPECIFICATION.md  07.PHASE7-PRODUCTION.md  08.DEVLOG-2026-07-01-youtube-pipeline-fixes.md  09.VIRAL-TRACKING.md  API.md  alur-AI-gueided smart search-discovery.md  alur-frontend-trends recomendation-toolcalling.md  alur-search-facebook.md  analisa-gap-facebook.md  analisa-gap-instagram.md  apify-instagram-method.md  bagaimana worker-bekejrja.md  cara kerja scraping  cara kerja viral-tracking.md  dok-ai-viral-discovery-otomatis.md  dok-instagram-data-pipeline.md  engagement-dashboard-api.md  fb-aluraristektur.md  fitur-intelligen.md  fix-update-post-get-instagram.md  flow-viral-tracking-dengan-contoh.md  ig-thirparty arsiktetur.md  instagram scrapping method.md  instagram-apify-migration.md  metrics-cards-api.md  metrics-engagement-api.md  overview-dashboard.md  retry-tombol-scrap.md  scraping-trends-recomendation.md  setting-tool-calling.md  smart-search.md  threads-integration.md  threads-redesign-schema.md  topic-notifications-api.md  trend-discovery-api.md  (+7 more)
migrations/: env.py
scripts/: ai_trend_submit.py  apify_facebook_test.py  apify_instagram_test.py  backfill_published_at.py  create_instagram_trending_table.sql  restore_db.sh  run_scrape.py  (+5 more)
(+468 files in other folders)
