[tool.poetry]
name = "social-intelligence"
version = "0.1.0"
description = "Social Intelligence Platform - Sentiment AI"
authors = ["Social Intelligence Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
redis = {extras = ["asyncio"], version = "^5.0.0"}
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
celery = {extras = ["redis"], version = "^5.3.0"}
python-multipart = "^0.0.9"
pgvector = "^0.3.0"
elasticsearch = {extras = ["async"], version = "^8.11.0"}
structlog = "^24.0.0"
tenacity = "^8.0.0"
python-dotenv = "^1.0.0"
reportlab = "^4.2.0"
python-docx = "^1.1.0"
Pillow = ">=10.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.0.0"
black = "^24.0.0"
ruff = "^0.3.0"
mypy = "^1.9.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
